--- a/.github/workflows/promptflow-evals-regression-test.yml
+++ b/.github/workflows/promptflow-evals-regression-test.yml
@@ -87,12 +87,7 @@ jobs:
           export PROMPT_FLOW_TEST_MODE=live
           # Estimate the run time for evaluator.
           export start_tm=`date +%s`
-          poetry run pytest -m performance_evaluator_test
+          poetry run pytest -m performance_test
           export run_time=$((`date +%s` - ${start_tm}))
-          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity evaluator_run_time_s --value $run_time --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
-          # Estimate the run time for evaluator with target function.
-          start_tm=`date +%s`
-          poetry run pytest -m performance_target_test
-          run_time=$((`date +%s` - ${start_tm}))
-          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity evaluator_target_run_time_s --value $run_time --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
+          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity evaluator_tests_run_time_s --value $run_time --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
