--- a/.github/workflows/license-compliance.yml
+++ b/.github/workflows/license-compliance.yml
@@ -10,16 +10,10 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    - uses: snok/install-poetry@v1
-    - name: install dependencies
-      run: |
-        poetry install
-        poetry run pip list
-      working-directory: ${{ github.workspace }}/src/promptflow-core
     - name: install pip-licenses
       run: pip install pip-licenses
     - name: check licenses
       run: |
-        poetry run pip-licenses --from=mixed --format=csv --output-file=LICENSES.csv
-        poetry run python ./scripts/licenses-compliance/check-licenses-compliance.py LICENSES.csv
-      working-directory: ${{ github.workspace }}
+        pip-licenses --from=mixed --format=csv --output-file=LICENSES.csv
+        python ../../scripts/licenses-compliance/check-licenses-compliance.py LICENSES.csv
+      working-directory: ${{ github.workspace }}/src/promptflow-core
