--- a/.github/workflows/promptflow-evals-regression-test.yml
+++ b/.github/workflows/promptflow-evals-regression-test.yml
@@ -88,7 +88,7 @@ jobs:
           export PROMPT_FLOW_TEST_MODE=live
           # Estimate the run time for evaluator.
           export start_tm=`date +%s`
-          poetry run pytest -m performance_test
+          poetry run pytest -m performance_test --junit-xml=test-results.xml
           export run_time=$((`date +%s` - ${start_tm}))
-          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity evaluator_tests_run_time_s --value $run_time --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }} --git-branch ${{ github.ref }}
+          poetry run python ../../scripts/code_qa/report_to_app_insights.py --activity evaluator_live_tests_run_time_s --junit-xml test-results.xml $run_time --git-hub-action-run-id ${{ github.run_id }} --git-hub-workflow ${{ github.workflow }} --git-hub-action ${{ github.action }} --git-branch ${{ github.ref }}
         working-directory: ${{ env.WORKING_DIRECTORY }}
