--- a/.github/workflows/promptflow-evals-local-e2e-test.yml
+++ b/.github/workflows/promptflow-evals-local-e2e-test.yml
@@ -53,7 +53,7 @@ jobs:
       - name: generate end-to-end test config from secret
         run: echo '${{ secrets.PF_EVALS_E2E_TEST_CONFIG }}' >> connections.json
         working-directory: ${{ env.WORKING_DIRECTORY }}
-      - name check azure is not installed
+      - name: check azure is not installed
         run: poetry run pytest scripts/code_qa/assert_local_install.py
         working-directory: ${{ github.workspace }}
       - name: run e2e tests
