--- a/.github/workflows/promptflow-evals-local-e2e-test.yml
+++ b/.github/workflows/promptflow-evals-local-e2e-test.yml
@@ -54,8 +54,8 @@ jobs:
         run: echo '${{ secrets.PF_EVALS_E2E_TEST_CONFIG }}' >> connections.json
         working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: check azure is not installed
-        run: poetry run pytest scripts/code_qa/assert_local_install.py
-        working-directory: ${{ github.workspace }}
+        run: poetry run pytest ../../scripts/code_qa/assert_local_install.py
+        working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: run e2e tests
         run: poetry run pytest -m localtest --cov=promptflow --cov-config=pyproject.toml --cov-report=term --cov-report=html --cov-report=xml
         working-directory: ${{ env.WORKING_DIRECTORY }}
