--- a/.github/workflows/promptflow-evals-e2e-test-local.yml
+++ b/.github/workflows/promptflow-evals-e2e-test-local.yml
@@ -1,4 +1,4 @@
-name: promptflow-evals-local-e2e-test
+name: promptflow-evals-e2e-test-local
 
 on:
   schedule:
@@ -6,7 +6,7 @@ on:
   pull_request:
     paths:
       - src/promptflow-evals/**
-      - .github/workflows/promptflow-evals-local-e2e-test.yml
+      - .github/workflows/promptflow-evals-e2e-test-local.yml
   workflow_dispatch:
 
 env:
@@ -21,7 +21,7 @@ jobs:
         # TODO: Encounter hash mismatch for ubuntu-latest and 3.9 combination during installing promptflow-evals package
         # https://github.com/microsoft/promptflow/actions/runs/9009397933/job/24753518853?pr=3158
         # Add 3.9 back after we figure out the issue
-        python-version: ['3.8', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
       fail-fast: false
     # snok/install-poetry need this to support Windows
     defaults:
