add CG to compliance check

--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -22,6 +22,9 @@ pool:
 steps:
 - checkout: self
 
+- task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+  displayName: 'Component Detection'
+
 - task: PowerShell@2
   inputs:
     targetType: inline
