--- a/.github/pipelines/component-governance.yml
+++ b/.github/pipelines/component-governance.yml
@@ -6,4 +6,6 @@ pool:
 
 steps:
 - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+  inputs:
+    sourceScanPath: ../../src/
   displayName: 'Component Detection'
