--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -74,5 +74,5 @@ steps:
 
 - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
   inputs:
-    sourceScanPath: ../../src/
+    sourceScanPath: '$(sourceLocation)\src'
   displayName: 'Component Detection'
