--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,6 +23,6 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           set -xe
-          poetry install -C promptflow-evals --with dev
+          poetry install -C src/promptflow-evals --with dev
       - name: run pylint and azure-pylint-guidelines-checker
         run: pylint --rcfile="../../pylintrc" src/promptflow-evals
