--- a/.github/workflows/promptflow-evals-installation-test.yml
+++ b/.github/workflows/promptflow-evals-installation-test.yml
@@ -60,5 +60,5 @@ jobs:
       - name: install promptflow-evals from wheel
         id: install_promptflow_with_extras
         run: |
-          ./scripts/code_qa/calculate_install_time.sh -r ${{ github.run_id }} -w ${{ github.workflow }} -a ${{ github.action }} -b ${{ github.ref }} -e "[azure]" -l "300"
+          bash ../../scripts/code_qa/calculate_install_time.sh -r ${{ github.run_id }} -w ${{ github.workflow }} -a ${{ github.action }} -b ${{ github.ref }} -e "[azure]" -l "300"
         working-directory: ${{ env.WORKING_DIRECTORY }}
