--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -24,5 +24,8 @@ jobs:
         run: |
           set -xe
           poetry install -C src/promptflow-evals --with dev
+      - name: Show installed packages
+        run: poetry show -C src/promptflow-evals
       - name: run pylint and azure-pylint-guidelines-checker
+        working-directory: ${{ env.WORKING_DIRECTORY }}
         run: pylint --rcfile="../../pylintrc" src/promptflow-evals
