--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -47,10 +47,14 @@ jsonpath_ng = ">=1.5.0"
 urllib3 = ">1.26.17"
 numpy = ">=1.22"
 promptflow-azure = { version = "<2.0.0,>=1.13.0", optional = true} # Needed for remote tracking
+pyjwt = ">2.8.0"
+azure-identity = ">1.17.1"
+azure-core = ">1.30.2"
+
 
 [tool.poetry.extras]
 azure = [
-    "promptflow-azure" 
+    "promptflow-azure"
 ]
 
 [tool.poetry.group.dev.dependencies]
