--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,10 +19,12 @@ jobs:
           python-version: 3.9
 
       - uses: snok/install-poetry@v1
-      - name: install and run pylint and azure-pylint-guidelines-checker
+      - name: install pylint and azure-pylint-guidelines-checker
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           set -xe
           poetry install -C src/promptflow-evals --with dev
           poetry show -C src/promptflow-evals
-          poetry run pylint --rcfile="../../pylintrc" src/promptflow-evals
+      - name: run pylint
+        working-directory: ${{ env.WORKING_DIRECTORY }}/src/promptflow-evals
+        run: poetry run pylint --rcfile="../../pylintrc"
