Update 'poetry run pylint' path

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,5 +26,7 @@ jobs:
           poetry install -C src/promptflow-evals --with dev
           poetry show -C src/promptflow-evals
       - name: run pylint
-        working-directory: ${{ env.WORKING_DIRECTORY }}/src/promptflow-evals
-        run: poetry run pylint --rcfile="${{ env.WORKING_DIRECTORY }}/../../pylintrc"
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: |
+          cd ${{ env.WORKING_DIRECTORY }}/src/promptflow-evals
+          poetry run pylint promptflow/evals
