Remove prepended '/' from cd line

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,5 +25,8 @@ jobs:
           set -xe
           poetry install -C src/promptflow-evals --with dev
           poetry show -C src/promptflow-evals
-          cd /src/promptflow-evals
+      - name: run pylint
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: |
+          cd src/promptflow-evals
           poetry run pylint promptflow/evals
