Replace dag with flex in evals (#3521)
Remove deprecated DAG flags from built-in evaluators in the evals
pacakge, replacing them with flex flows. Functionality this amounts to
directly coding the behavior specified in former flow.dag.yaml files.

This ended up editing 2 evaluators: F1 score and content safety. In the
case of content safety, I used this change to refactor the code slightly
into a base class and children, which mostly still exist just to have
their own docstrings.

--- a/.github/workflows/promptflow-evals-e2e-test-local.yml
+++ b/.github/workflows/promptflow-evals-e2e-test-local.yml
@@ -38,6 +38,9 @@ jobs:
       - name: install test dependency group
         run: poetry install --only test
         working-directory: ${{ env.WORKING_DIRECTORY }}
+      - name: install recording
+        run: poetry run pip install -e ../promptflow-recording
+        working-directory: ${{ env.WORKING_DIRECTORY }}
       - name: install promptflow packages in editable mode
         run: |
           poetry run pip install -e ../promptflow
