--- a/src/promptflow-evals/pyproject.toml
+++ b/src/promptflow-evals/pyproject.toml
@@ -133,10 +133,10 @@ include_trailing_comma = true
 honor_noqa = true
 ensure_newline_before_comments = true
 skip_glob = [
-        docs/**,
-        pipelines/**,
-        pytest/**,
-        samples/**,
-    ]
+  "docs/**",
+  "pipelines/**",
+  "pytest/**",
+  "samples/**",
+]
 known_third_party = azure,mock,numpy,pandas,pydash,pytest,pytest_mock,requests,setuptools,six,sklearn,tqdm,urllib3,utilities,utils,yaml,jsonschema,strictyaml,jwt,pathspec,isodate,docker
 known_first_party = promptflow
