--- a/.github/pipelines/compliance_check.yml
+++ b/.github/pipelines/compliance_check.yml
@@ -37,7 +37,7 @@ steps:
     optionsPE: '1'
     optionsUEPATH: '$(sourceLocation)\scripts\compliance-check\user_exclusion.xml'
     result: '$(sourceLocation)\scripts\compliance-check\result.tsv'
-    optionsXCLASS: 'Geopolitical'
+    optionsXCLASS: 'Geopolitical,Diversity'
 
 - task: PowerShell@2
   inputs:
