--- a/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_content_safety_service_unavailable.yaml
+++ b/src/promptflow-evals/tests/recordings/azure/test_builtin_evaluators_TestBuiltInEvaluators_test_content_safety_service_unavailable.yaml
@@ -7,13 +7,13 @@ interactions:
       accept-encoding:
       - gzip, deflate
       connection:
-      - keep-alive
+      - close
       content-type:
       - application/json
       host:
       - management.azure.com
       user-agent:
-      - python-httpx/0.27.0
+      - promptflow-evals/0.1.0.dev0
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000?api-version=2023-08-01-preview
   response:
@@ -26,6 +26,8 @@ interactions:
     headers:
       cache-control:
       - no-cache
+      connection:
+      - close
       content-length:
       - '2911'
       content-type:
@@ -43,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.021'
+      - '0.027'
     status:
       code: 200
       message: OK
@@ -55,7 +57,7 @@ interactions:
       accept-encoding:
       - gzip, deflate
       connection:
-      - keep-alive
+      - close
       content-type:
       - application/json
       host:
@@ -66,22 +68,21 @@ interactions:
     uri: https://westus2.api.azureml.ms/raisvc/v1.0/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/00000/providers/Microsoft.MachineLearningServices/workspaces/00000/checkannotation
   response:
     body:
-      string: "<html>\r\n<head><title>503 Service Temporarily Unavailable</title></head>\r\n<body>\r\n<center><h1>503
-        Service Temporarily Unavailable</h1></center>\r\n<hr><center>nginx</center>\r\n</body>\r\n</html>\r\n"
+      string: unknown to cluster
     headers:
       connection:
-      - keep-alive
+      - close
       content-length:
-      - '190'
+      - '18'
       content-type:
-      - text/html
+      - application/octet-stream
       strict-transport-security:
       - max-age=31536000; includeSubDomains; preload
       x-content-type-options:
       - nosniff
       x-request-time:
-      - '0.000'
+      - '0.007'
     status:
-      code: 503
-      message: Service Temporarily Unavailable
+      code: 530
+      message: <none>
 version: 1
